--- a/style.css
+++ b/style.css
@@ -1,170 +1,83 @@
 #container  {
-
-width: 900px;
-
+width: 1280px;
 }
-
 #header	{
-
-width: 900px;
-height: 100px;
+width: 1280px;
+height: 60%;
 position: relative;
-background-image: url(images/headerBG.jpg);
+background-image: url(images/message.jpg);
+background-size: cover;
+max-height: 100%;
 border-bottom: 2px solid #000000;
-
 }
-
-#header a  {
-
-color: #ffffff;
-text-decoration: underline;
-font-weight: bold;
-font-family: Verdana;
-font-size: 14px;
-
-}
-
-#header a:visited  {
-
-color: #000000;
-text-decoration: underline;
-font-weight: bold;
-
-}
-
-#header a:hover  {
-
-color: #cc0000;
-text-decoration: none;
-font-weight: bold;
-
-}
-
-
 .HorizLinks  {
-
 position: absolute; top: 77px; left: 180px; 
-
 }
-
 .HorizLinks ul { 
-
 margin: 0px; 
-
 }
-
 .HorizLinks li {
-
 margin: 0px 15px 0px 0px;
 list-style-type: none;
 display: inline;
-	
 }
-
-
 #horizontalnav  {
-
-width: 900px;
+width: 1280px;
 height: 30px;
 position: relative;
-background-color: #F2D6AF;
+background-color: #ebf0fa;
 border-bottom: 2px solid #000000;
-
 }
 
 .navlinks  {
-
 position: absolute; top: 4px; left: 140px; 
-
 }
-
 .navlinks ul { 
-
 margin: auto;
-
 }
-
 .navlinks li {
-
-margin: 0px 18px 0px 0px;
+margin: 0px 28px 0px 0px;
 list-style-type: none;
 display: inline;
-	
 }
-
 .navlinks li a {
-
 color: #000000;
 padding: 5px 12px 7px;
 text-decoration: none;
 font-size: 16px;
 font-family: Verdana;
-
 }
 
 .navlinks li a:hover{
-
-color: #ffffff;
-background-image: url(images/BGhover.jpg);
- /*If you want to use a color for the background instead replace above line with background-color: [insert color here with # sign in front];*/
+color: #ff9f80;
 text-decoration: underline;
-
-
 }
-
-
-#header p  {
-
-color: #000000;
-font-family: Arial;
-font-weight: bold;
-
-}
-
-.smalltext   {
-
-font-size: 9px;
-font-family: Arial;
-
-}
-
-
 #leftnav {
-
 float: left;
-width: 140px;
-height: 400px;
-background-color: #F8AA3C;
+width: 240px;
+height: 100%;
+background-color: #ebf0fa;
 border-right: 1px dashed #694717;
-
 }
-		
-
-#rightnav  {
-
-float: right;
-width: 140px;
-height: 400px;
-background-color: #F8AA3C;
-border-left: 1px dashed #694717;
-
+#leftnav ul{
+margin-top: 20px;
+padding-top: 10px;
 }
-
+.leftbox{
+margin: 5px;
+margin-top: 50px;
+padding:10px;
+}
 #body  {
-
 margin: auto;
-width: 600px;
+margin-top: 20px;
+width: 800px;
 padding: 10px 0px 0px 10px;
-
-
 }
 
 #footer  {
-
 clear: both;
 background-color: #D1C0A7;
-
-
 }
 
 .data  {
@@ -173,18 +86,16 @@ margin-top: 10px;
 padding: 5px 5px 5px 5px;
 background-color: #dddddd;
 border: 2px solid #d22929;
-width: 400px;
+width: 800px;
 color: #000000;
 
 }
 
-h2  {
-
+h2  { 
 font-size: 20px;
 color: #cc0000;
 padding: 10px;
 font-family: Verdana;
-
 }
 
 
